see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

11-Dec-2009 Louis Landry
 ^ [#18958] Administrator > Site > System Information > Directory Permissions (images/stories/) - Thanks Ryan Briscall
 ^ Clean up of reference operators as they aren't needed in PHP5 - Thanks Joe LeBlanc

11-Dec-2009 Andrew Eddie
 # Doc updates to JModelList, internal refuddling.
 # Fix bugs in JForm package dependency inclusions; code formatting.
 # Fix bug in menu item model (rebuildTree not a valid method).
 ^ Removed spaces from mod_menu frontend to help with inline styling.
 ^ Added support back into mod_menu for start and end level.

09-Dec-2009 Sam Moffatt
 ^ Committed patch for JCache care of Roben Goethals
 # Change to the installation SQL for the extensions table
 ^ Start of refactoring for the extensions manager
 # Minor fixes for modules updates and updates in general

07-Dec-2009 Andrea Tarr
# Allow admin templates to install correctly

01-Dec-2009 Ron Severdia
+ Added CSS for required fields

01-Dec-2009 Ron Severdia
+ Added Blueprint framework for Atomic template

30-Nov-2009 Mark Dexter
^ Remove Category level parameters for articles
# Fix bug where category metadata wasn't saving to database
# Replace eregi with stripos in contact and weblinks table check
# Fix error when saving a contact with a link URL

25-Nov-2009 Mark Dexter
^ Changed attribs column in jos_content from text to varchar(5120).

25-Nov-2009 Andrew Eddie
 # Fixed bug in JHtmlContent improperly using JTableContent (/me shakes head).

25-Nov-2009 Andrew Eddie
 + Added menu_image param to alias and url menu link types.