@@ -1,6 +1,6 @@
 <?php
 /**
- * @version		$Id: controller.php 13265 2009-10-21 10:08:19Z eddieajau $
+ * @version		$Id$
  * @copyright	Copyright (C) 2005 - 2009 Open Source Matters, Inc. All rights reserved.
  * @license		GNU General Public License, see LICENSE.php
  */
