@@ -1,6 +1,6 @@
 <?php
 /**
- * @version		$Id: controller.php 13265 2009-10-21 10:08:19Z eddieajau $
+ * @version		$Id$
  * @copyright	Copyright (C) 2005 - 2009 Open Source Matters, Inc. All rights reserved.
  * @license		GNU General Public License, see LICENSE.php
  */
@@ -9,7 +9,10 @@
 defined('_JEXEC') or die;
 
 class InstallerControllerUpdate extends JController {
-	// Should probably use multiple controllers here
+
+	/**
+	 * Update a set of extensions
+	 */
 	function update()
 	{
 		// Check for request forgeries
@@ -29,6 +32,9 @@ class InstallerControllerUpdate extends JController {
 		$this->setRedirect('index.php?option=com_installer&view=install');
 	}
 
+	/**
+	 * Find new updates
+	 */
 	function find()
 	{
 		// Find updates
@@ -41,6 +47,9 @@ class InstallerControllerUpdate extends JController {
 		//$view->display();
 	}
 
+	/**
+	 * Purges updates
+	 */
 	function purge()
 	{
 		// Purge updates
