@@ -32,9 +32,8 @@ class InstallerModelUpdate extends InstallerModel
 	var $_message = '';
 
 	/**
-	 * Current extension list
+	 * Current update list
 	 */
-
 	protected function _loadItems()
 	{
 		jimport('joomla.filesystem.folder');
@@ -70,6 +69,11 @@ class InstallerModelUpdate extends InstallerModel
 		}
 	}
 
+	/**
+	 * Finds updates for an extension
+	 * @param int Extension identifier to look for
+	 * @return boolean Result
+	 */
 	public function findUpdates($eid=0)
 	{
 		$updater =& JUpdater::getInstance();
@@ -77,9 +81,15 @@ class InstallerModelUpdate extends InstallerModel
 		return true;
 	}
 
+	/**
+	 * Removes all of the updates from the table
+	 * @return boolean result of operation
+	 */
 	public function purge() 
 	{
 		$db =& JFactory::getDBO();
+		// Note: TRUNCATE is a DDL operation
+		// This may or may not mean depending on your database
 		$db->setQuery('TRUNCATE TABLE #__updates');
 		if ($db->Query()) 
 		{
@@ -93,6 +103,11 @@ class InstallerModelUpdate extends InstallerModel
 		}
 	}
 
+	/**
+	 * Update function
+	 * Sets the "result" state with the result of the operation
+	 * @param Array[int] List of updates to apply
+	 */
 	public function update($uids) 
 	{
 		$result = true;
@@ -102,18 +117,20 @@ class InstallerModelUpdate extends InstallerModel
 			$instance =& JTable::getInstance('update');
 			$instance->load($uid);
 			$update->loadFromXML($instance->detailsurl);
-			$res = $this->_install($update);
-			if ($res) {
-				$msg = JText::sprintf('INSTALLEXT', JText::_($update->get('type','IUnknown')), JText::_('Success'));
-			} else {
-				$msg = JText::sprintf('INSTALLEXT', JText::_($update->get('type','IUnknown')), JText::_('Error'));
-			}
+			// install sets state and enqueues messages
+			$res = $this->_install($update); 
 			$result = $res & $result;
 		}
 		
+		// Set the final state
 		$this->setState('result', $result);
 	}
 	
+	/**
+	 * Handles the actual update installation
+	 * @param JUpdate an update definition
+	 * @return boolean Result of install
+	 */
 	private function _install($update)
 	{
 		$app = &JFactory::getApplication();
